# brute

./: CMakeLists.txt
include/: blockchain.hpp  credentials.hpp  database.hpp  notifier.hpp  worker.hpp
include/cuda/: ecdsa.cuh  u256.cuh
src/: main.cpp  main.cu
